Support for JDK 9+.